	  global toggle list, in order to make the help text easier to
	  read.  Changes to sc_init_one(), toggle_init(),
	  toggle_init_one(), shortcut_init(), get_toggle(), and
	  help_init(). (DLR, suggested by Benno Schulenberg)
	- Reduce NO_RCFILE to a static bool in nano.c, since it's only
	  used there.  Changes to finish() and main(). (DLR)
- files.c:
  open_file()
	- Remove redundant wording in the error message when we try to
	  open a device file. (DLR)
  safe_tempfile()
	- Don't ignore $TMPDIR if it's set but blank, for consistency.
	  (DLR)
  write_file()
	- Don't free backupname before displaying it in a statusbar error
	  message. (DLR, found by Bill Marcum)
	- If we can't save the backup file for some reason, at least
	  save the original file, if possible, since that's better than
	  saving nothing. (DLR, problem found by Bill Marcum, solution
	  suggested by Jordi)
	- Clarify the error message when writing a temporary file for
	  prepending fails. (DLR)
	- Simplify the routine for closing the file just before we
	  indicate success on the statusbar. (DLR)
- global.c:
  shortcut_init()
	- Change the cursor position display help text to use "display"
	  instead of "show", for consistency. (DLR)
	- In the main shortcut list, move the "Refresh" shortcut down to
	  after the "Enter" shortcut, for consistency. (DLR)
	- Add the ability to go to the first and last line of the
	  current file from the main list via Meta-\ (Meta-|) and Meta-/
	  (Meta-?).  Also, make sure all the equivalent shortcuts in the
	  search, replace, and "Go To Line" lists accept both the meta
	  keys and the equivalent function keys. (DLR)
	- Reorganize the main shortcut list to make it easier for new
	  users.  It now lists the twelve Pico-compatible default
	  operations, followed by search and replace shortcuts, followed
	  by cut and paste shortcuts, followed by marking shortcuts,
	  followed by back and forth movement shortcuts, followed by